--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@ section.visible {
     <section id="about">
       <h2>About Me</h2>
       <div class="card">
-        <img src="profile.jpg" alt="Profile Photo" class="profile-img">
+        <img src="startup.png" alt="Profile Photo" class="profile-img">
         <p>Dinesh Babu – Cybersecurity and Software Development Enthusiast </br></br>
 Dinesh Babu is a 3rd-year Cyber Security student at KLN College of Engineering with strong skills in software development, particularly in Python, JavaScript, and front-end development. He is experienced in database management and has successfully completed four project-based works involving web development and Python with database integration. Additionally, he is adept at using Wireshark for network analysis, developing malware analysis tools, web vulnerability detection tools, and possesses excellent problem-solving skills in cybersecurity contexts.</p>
   </div>
